--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -1,5 +1,5 @@
 <!-- .row -->
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 text-center">
       <h1 class="page-header">How Soon Can I Eat at UCLA?</h1>
