--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -10,7 +10,7 @@
 <!-- /.row -->
 
 <!-- .row -->
-    <div class="col-lg-12 text-center">
+    <div class="col-lg-12 col-sm-12 text-center">
       <h2 class="<%= @bruin_cafe %>"> Bruin Cafe </h1>
         <p>You should be able to get in and out pretty quick</p>
       <%= form_for @update do |f| %>
@@ -23,7 +23,7 @@
       <% end %>
     </div>
 
-    <div class="col-lg-12 text-center">
+    <div class="col-lg-12 col-sm-12 text-center">
       <h2 class="<%= @bruin_plate %>"> Bruin Plate </h1>
 
       <%= form_for @update do |f| %>
@@ -36,7 +36,7 @@
       <% end %>
     </div>
 
-    <div class="col-lg-12 text-center">
+    <div class="col-lg-12 col-sm-12 text-center">
       <h2 class="<%= @cafe_1919 %>"> Cafe 1919 </h1>
 
       <%= form_for @update do |f| %>
@@ -49,7 +49,7 @@
       <% end %>
     </div>
 
-  <div class="col-lg-12 text-center">
+  <div class="col-lg-12 col-sm-12 text-center">
     <h2 class="<%= @covell %>"> Covell </h1>
 
     <%= form_for @update do |f| %>
@@ -62,7 +62,7 @@
     <% end %>
   </div>
 
-  <div class="col-lg-12 text-center">
+  <div class="col-lg-12 col-sm-12 text-center">
     <h2 class="<%= @de_neve %>"> De Neve </h1>
 
     <%= form_for @update do |f| %>
@@ -75,7 +75,7 @@
     <% end %>
   </div>
 
-  <div class="col-lg-12 text-center">
+  <div class="col-lg-12 col-sm-12 text-center">
     <h2 class="<%= @feast %>"> FEAST</h1>
 
     <%= form_for @update do |f| %>
@@ -88,7 +88,7 @@
     <% end %>
   </div>
 
-  <div class="col-lg-12 text-center">
+  <div class="col-lg-12 col-sm-12 text-center">
     <h2 class="<%= @rendezvous %>"> Rendezvous </h1>
 
     <%= form_for @update do |f| %>
