--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -29,10 +29,10 @@
       <%= form_for @update do |f| %>
         <%= f.hidden_field :hall_name, :value => "BruinPlate" %>
 
-        <%= f.label "The current load is:", class: "btn not-btn-custom btn-lg" %>
-        <%= f.submit "Low", class: "btn btn-custom-low btn-lg" %>
-        <%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg" %>
-        <%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg" %>
+        <div class="form-pad"><%= f.label "The current load is:", class: "btn not-btn-custom btn-lg btn-responsive" %></div>
+        <div class="form-pad"><%= f.submit "Low", class: "btn btn-custom-low btn-lg btn-responsive" %></div>
+        <div class="form-pad"><%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg btn-responsive" %></div>
+        <div class="form-pad"><%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg btn-responsive" %></div>
       <% end %>
     </div>
 
@@ -42,10 +42,10 @@
       <%= form_for @update do |f| %>
         <%= f.hidden_field :hall_name, :value => "Cafe1919" %>
 
-        <%= f.label "The current load is:", class: "btn not-btn-custom btn-lg" %>
-        <%= f.submit "Low", class: "btn btn-custom-low btn-lg" %>
-        <%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg" %>
-        <%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg" %>
+        <div class="form-pad"><%= f.label "The current load is:", class: "btn not-btn-custom btn-lg btn-responsive" %></div>
+        <div class="form-pad"><%= f.submit "Low", class: "btn btn-custom-low btn-lg btn-responsive" %></div>
+        <div class="form-pad"><%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg btn-responsive" %></div>
+        <div class="form-pad"><%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg btn-responsive" %></div>
       <% end %>
     </div>
 
@@ -55,10 +55,10 @@
     <%= form_for @update do |f| %>
       <%= f.hidden_field :hall_name, :value => "Covell" %>
 
-      <%= f.label "The current load is:", class: "btn not-btn-custom btn-lg" %>
-      <%= f.submit "Low", class: "btn btn-custom-low btn-lg" %>
-      <%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg" %>
-      <%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg" %>
+      <div class="form-pad"><%= f.label "The current load is:", class: "btn not-btn-custom btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Low", class: "btn btn-custom-low btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg btn-responsive" %></div>
     <% end %>
   </div>
 
@@ -68,10 +68,10 @@
     <%= form_for @update do |f| %>
       <%= f.hidden_field :hall_name, :value => "DeNeve" %>
 
-      <%= f.label "The current load is:", class: "btn not-btn-custom btn-lg" %>
-      <%= f.submit "Low", class: "btn btn-custom-low btn-lg" %>
-      <%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg" %>
-      <%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg" %>
+      <div class="form-pad"><%= f.label "The current load is:", class: "btn not-btn-custom btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Low", class: "btn btn-custom-low btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg btn-responsive" %></div>
     <% end %>
   </div>
 
@@ -81,10 +81,10 @@
     <%= form_for @update do |f| %>
       <%= f.hidden_field :hall_name, :value => "FEAST" %>
 
-      <%= f.label "The current load is:", class: "btn not-btn-custom btn-lg" %>
-      <%= f.submit "Low", class: "btn btn-custom-low btn-lg" %>
-      <%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg" %>
-      <%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg" %>
+      <div class="form-pad"><%= f.label "The current load is:", class: "btn not-btn-custom btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Low", class: "btn btn-custom-low btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg btn-responsive" %></div>
     <% end %>
   </div>
 
@@ -94,10 +94,10 @@
     <%= form_for @update do |f| %>
       <%= f.hidden_field :hall_name, :value => "Rendezvous" %>
 
-      <%= f.label "The current load is:", class: "btn not-btn-custom btn-lg" %>
-      <%= f.submit "Low", class: "btn btn-custom-low btn-lg" %>
-      <%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg" %>
-      <%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg" %>
+      <div class="form-pad"><%= f.label "The current load is:", class: "btn not-btn-custom btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Low", class: "btn btn-custom-low btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Moderate", class: "btn btn-custom-moderate btn-lg btn-responsive" %></div>
+      <div class="form-pad"><%= f.submit "Heavy", class: "btn btn-custom-heavy btn-lg btn-responsive" %></div>
     <% end %>
   </div>
 
