--- a/app/assets/stylesheets/updates.scss
+++ b/app/assets/stylesheets/updates.scss
@@ -112,6 +112,8 @@ h2.unknown {
     border-radius:3px;
     width: 100%;
   }
+
+  .form-pad-full { padding-top: 10px; } }
 }
 
 @media screen and (min-device-width: 768px) and (max-device-width: 1600px)
