--- a/app/assets/stylesheets/updates.scss
+++ b/app/assets/stylesheets/updates.scss
@@ -113,7 +113,7 @@ h2.unknown {
     width: 100%;
   }
 
-  .form-pad-full { padding-top: 10px; } }
+  .form-pad-full { padding-top: 10px; } 
 }
 
 @media screen and (min-device-width: 768px) and (max-device-width: 1600px)
