Pretty much done

--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -134,7 +134,10 @@
 </div>
 
 <div class="container-fluid">
-  <div class="container"
-    <p> Matt Garnett </p>
-  </div>
-<div>
+
+    <div class="row">
+      <div class="col-lg-6 col-lg-offset-3 text-center">
+        <h1 class="page-header" style="font-size: 1em">Matt Garnett © 2015 | Built at UCLA Local Hack Day</h1>
+    </div>
+
+</div>
