--- a/app/assets/stylesheets/updates.scss
+++ b/app/assets/stylesheets/updates.scss
@@ -14,6 +14,21 @@ h2 {
   border-bottom-color: #32ace1 !important;
 }
 
+.footer {
+
+  background-color: #32ace1 !important;
+
+  border-bottom-style: solid !important;
+  border-bottom-color: #32ace1 !important;
+}
+
+.footer h1 {
+  font-family: 'Open Sans', sans-serif !important;
+  font-weight: 100;
+  font-size: 3em;
+  color: #f7eaca;
+}
+
 body {
     background-color: #f7eaca;
 }
